Fix minor top spacing for wider screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,7 +15,7 @@ body {
 
 @media (min-width: 768px) {
   .spg-content {
-    padding: 175px 0 250px 0;
+    padding: 200px 0 250px 0;
   }
 }
 
